--- a/data/po/zh_CN.po
+++ b/data/po/zh_CN.po
@@ -1,217 +1,162 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR chrysn
+# Simplified Chinese translation for arandr.
+# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# ChuChangMing <82724824@qq.com>, 2015
+# ykla <yklaxds@gmail>, 2024.
 #
+#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: arandr 0.1.2\n"
-"Report-Msgid-Bugs-To: chrysn@fsfe.org\n"
-"POT-Creation-Date: 2015-05-21 10:02+0200\n"
-"PO-Revision-Date: 2015-11-17 16:03+0000\n"
-"Last-Translator: ChuChangMing <82724824@qq.com>\n"
-"Language-Team: Chinese (China) "
-"<https://hosted.weblate.org/projects/arandr/translations/zh_CN/>\n"
+"Project-Id-Version: arandr\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2024-07-21 20:49+0800\n"
+"PO-Revision-Date: 2024-07-21 21:04+0800\n"
+"Last-Translator: ykla <yklaxds@gmail.com>\n"
+"Language-Team: ykla <yklaxds@gmail.com>\n"
 "Language: zh_CN\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=1; plural=0;\n"
-"X-Generator: Weblate 2.5-dev\n"
-"X-Poedit-Language: Chinese\n"
-"X-Poedit-Country: CHINA\n"
-"X-Poedit-SourceCharset: utf-8\n"
+"X-Generator: Poedit 3.4.4\n"
+"X-Poedit-SourceCharset: UTF-8\n"
 
-#: screenlayout/gui.py:117
-msgid "_Layout"
-msgstr "布局(_L)"
+#: ../../screenlayout/gui.py:116
+msgid "_File"
+msgstr "文件(_F)"
 
-#: screenlayout/gui.py:128
+#: ../../screenlayout/gui.py:129
 msgid "_View"
-msgstr "视图(_V)"
+msgstr "查看(_V)"
 
-#: screenlayout/gui.py:130
-msgid "_Outputs"
-msgstr "输出(_O)"
+#: ../../screenlayout/gui.py:131
+msgid "_Configure"
+msgstr "配置(_C)"
 
-#: screenlayout/gui.py:131
+#: ../../screenlayout/gui.py:132
+msgid "_Screens"
+msgstr "屏幕(_S)"
+
+#: ../../screenlayout/gui.py:133
 msgid "Dummy"
 msgstr "虚拟"
 
-#: screenlayout/gui.py:133
-msgid "_System"
-msgstr "系统(_S)"
-
-#: screenlayout/gui.py:134
-msgid "_Keybindings (Metacity)"
-msgstr "键盘闪烁(Metacity)(_K)"
-
-#: screenlayout/gui.py:136
+#: ../../screenlayout/gui.py:135
 msgid "_Help"
 msgstr "帮助(_H)"
 
-#: screenlayout/gui.py:140
+#: ../../screenlayout/gui.py:139
 msgid "1:4"
 msgstr "1:4"
 
-#: screenlayout/gui.py:141
+#: ../../screenlayout/gui.py:140
 msgid "1:8"
 msgstr "1:8"
 
-#: screenlayout/gui.py:142
+#: ../../screenlayout/gui.py:141
 msgid "1:16"
 msgstr "1:16"
 
-#: screenlayout/gui.py:189
+#: ../../screenlayout/gui.py:199
 msgid "Script Properties"
 msgstr "脚本属性"
 
-#: screenlayout/gui.py:201
+#. notebook.append_page(wacom_options, Gtk.Label(_("Wacom options")))
+#: ../../screenlayout/gui.py:213
 msgid "Script"
 msgstr "脚本"
 
-#: screenlayout/gui.py:217
+#: ../../screenlayout/gui.py:243
+msgid ""
+"Screen updated. Click 'OK' if is this is correct, or 'Cancel' to revert to "
+"previous setting. Reverting in 10 seconds..."
+msgstr ""
+"屏幕已刷新。如果正确，请点击“确定”；否则点击“取消”以恢复到之前的设置。10 秒后"
+"将自动恢复……"
+
+#: ../../screenlayout/gui.py:247
+msgid ""
+"Screen layout updated - changes will take effect on reboot.\n"
+"Click 'Yes' to reboot now, or 'No' to reboot later"
+msgstr ""
+"屏幕布局已刷新——变更将在重启后生效。\n"
+"点击“是”立即重启，或点击“否”稍后重启"
+
+#: ../../screenlayout/gui.py:270 ../../screenlayout/gui.py:284
 #, python-format
 msgid ""
 "XRandR failed:\n"
 "%s"
 msgstr ""
-"XRandR 失败:\n"
+"XRandR 错误：\n"
 "%s"
 
-#: screenlayout/gui.py:227
+#: ../../screenlayout/gui.py:296
 msgid "Open Layout"
 msgstr "打开布局"
 
-#: screenlayout/gui.py:239
+#: ../../screenlayout/gui.py:310
 msgid "Save Layout"
 msgstr "保存布局"
 
-#: screenlayout/meta.py:23
+#: ../../screenlayout/meta.py:25
 msgid "ARandR Screen Layout Editor"
-msgstr "ARandR 屏幕布局编辑器"
+msgstr "ARandR 屏幕布局剪辑器"
 
-#. # translators, please translate in the style of "Another XRandR GUI
-#. # (ein weiteres GUI für XRandR)" so users get both the explanation of
-#. # the acronym and a localized version.
-#: screenlayout/meta.py:27
+#. translators, please translate in the style of "Another XRandR GUI
+#. (ein weiteres GUI für XRandR)" so users get both the explanation of
+#. the acronym and a localized version.
+#: ../../screenlayout/meta.py:29
 msgid "Another XRandR GUI"
-msgstr "其它 XRandR 图形界面"
+msgstr "其他 XRandR 图形化界面"
 
-#: screenlayout/metacity.py:53
-msgid "Accelerator"
-msgstr "适配器"
-
-#: screenlayout/metacity.py:54
-msgid "Action"
-msgstr "操作"
-
-#: screenlayout/metacity.py:120
-msgid "disabled"
-msgstr "禁用"
-
-#: screenlayout/metacity.py:135
-msgid "New accelerator..."
-msgstr "新建适配器..."
-
-#: screenlayout/metacity.py:192
-msgid "no action"
-msgstr "无操作"
-
-#: screenlayout/metacity.py:228
-msgid "incompatible configuration"
-msgstr "不合适的配置"
-
-#: screenlayout/metacity.py:235
-msgid "other application"
-msgstr "其它应用程序"
-
-#: screenlayout/metacity.py:255
-#, python-format
-msgid "No files in %(folder)r. Save a layout first."
-msgstr "在 %(folder)r 没有文件。请先保存一个布局。"
-
-#: screenlayout/metacity.py:284
-msgid "gconf not available."
-msgstr "gconf 不可用。"
-
-#: screenlayout/metacity.py:285
-msgid ""
-"In order to configure metacity, you need to have the python gconf module "
-"installed."
-msgstr "要配置 metacity，你需要先安装 python gconf 模块。"
-
-#: screenlayout/metacity.py:292
-msgid "Keybindings (via Metacity)"
-msgstr "键盘闪烁(通过Metacity)"
-
-#: screenlayout/metacity.py:305
-msgid ""
-"Click on a button in the left column and press a key combination you want to "
-"bind to a certain screen layout. (Use backspace to clear accelerators, "
-"escape to abort editing.) Then, select one or more layouts in the right "
-"column.\n"
-"\n"
-"This will only work if you use metacity or another program reading its "
-"configuration."
-msgstr ""
-"点击左边栏的按钮，并在你想要指定的相应屏幕布局里按一个键。\n"
-"(按退位键清除字符，按 ESC 键放弃编辑。)\n"
-"然后在右边栏里，选择一个或多个布局。\n"
-"\n"
-"以上这些，只有在你使用 metacity 或者其它程序来读取配置时有效。"
-
-#: screenlayout/widget.py:61
+#: ../../screenlayout/widget.py:90
 msgid ""
 "Your configuration does not include an active monitor. Do you want to apply "
 "the configuration?"
-msgstr "你的配置不包括一个活动的显示器。要应用这个配置吗？"
+msgstr "您的配置中未包含已激活的显示器。您确定要应用此配置吗？"
 
-#: screenlayout/widget.py:327
+#: ../../screenlayout/widget.py:476
 msgid "Active"
 msgstr "激活"
 
-#: screenlayout/widget.py:335
+#: ../../screenlayout/widget.py:485
 msgid "Primary"
 msgstr "主要的"
 
-#: screenlayout/widget.py:349
+#: ../../screenlayout/widget.py:507 ../../screenlayout/widget.py:522
 #, python-format
 msgid "Setting this resolution is not possible here: %s"
-msgstr "这里不适合设置这个分辨率: %s"
+msgstr "此处无法设置该分辨率：%s"
 
-#: screenlayout/widget.py:362
+#: ../../screenlayout/widget.py:536
 #, python-format
 msgid "This orientation is not possible here: %s"
-msgstr "这个方向不适合这里: %s"
+msgstr "此处无法设置该方向：%s"
 
-#: screenlayout/widget.py:368
+#: ../../screenlayout/widget.py:543
 msgid "Resolution"
 msgstr "分辨率"
 
-#: screenlayout/widget.py:370
+#: ../../screenlayout/widget.py:545
+msgid "Frequency"
+msgstr "刷新率"
+
+#: ../../screenlayout/widget.py:547
 msgid "Orientation"
 msgstr "方向"
 
-#: screenlayout/xrandr.py:275
+#: ../../screenlayout/xrandr.py:368
 msgid "A part of an output is outside the virtual screen."
-msgstr "输出的部分内容超出虚拟屏幕。"
+msgstr "部分输出超出了虚拟屏幕。"
 
-#: screenlayout/xrandr.py:278
+#: ../../screenlayout/xrandr.py:372
 msgid "An output is outside the virtual screen."
-msgstr "某个输出超出虚拟屏幕。"
+msgstr "输出超出了虚拟屏幕。"
 
-#~ msgid "normal"
-#~ msgstr "正常"
+#: ../../data/arandr.desktop:3 ../../data/fkms/arandr.desktop:3
+msgid "Screen Configuration"
+msgstr "屏幕配置"
 
-#~ msgid "left"
-#~ msgstr "左侧"
-
-#~ msgid "inverted"
-#~ msgstr "倒置"
-
-#~ msgid "right"
-#~ msgstr "右侧"
-
-#~ msgid "Shell script(Layout file)"
-#~ msgstr "Shell脚本(布局文件)"
+#: ../../data/arandr.desktop:4 ../../data/fkms/arandr.desktop:4
+msgid "Screen Settings"
+msgstr "屏幕设置"
