--- a/data/po/zh_CN.po
+++ b/data/po/zh_CN.po
@@ -100,7 +100,7 @@ msgstr "保存布局"
 
 #: ../../screenlayout/meta.py:25
 msgid "ARandR Screen Layout Editor"
-msgstr "ARandR 屏幕布局剪辑器"
+msgstr "ARandR 屏幕布局编辑器"
 
 #. translators, please translate in the style of "Another XRandR GUI
 #. (ein weiteres GUI für XRandR)" so users get both the explanation of
