add me to README

--- a/README
+++ b/README
@@ -148,7 +148,7 @@ Translations by
 * Belvar, tornoz (Breton)
 * Bruno_Patri, Clément Démoulins, Tuux (French)
 * Calin Sopterean, Себастьян Gli ţa Κατινα (Romanian)
-* Carezero, ChuChangMing (Chinese (China))
+* Carezero, ChuChangMing, ykla (Chinese (China))
 * DARREN MELROY MENEZES, gundachandru (Kannada)
 * Denis Jukni (Albanian)
 * Fred Maranhão, Guilherme Souza Silva, Phantom X (Portuguese (Brazil))
